system-ui (1.1.12~1) unstable; urgency=low

  * [UNRELEASED]

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Tue, 23 Aug 2011 15:33:21 +0300

system-ui (1.1.11-1) unstable; urgency=low

  * Fixes: NB#278398 - COREWEB: /usr/bin/sysuid '__aeabi_ldiv0 StatusIndicatorAnimationView::setupAnimationTimeline StatusIndicatorAnimationView::applyStyle StatusIndicatorIconView::applyStyle'

 -- Pankaj Saharan <pankaj.saharan@nokia.com>  Tue, 23 Aug 2011 15:30:05 +0300

system-ui (1.1.10-1) unstable; urgency=low

  * Fixes: NB#262034 - Accessory connected sound played when disconnecting USB cable

 -- Pauli Lehtinen <pauli.lehtinen@nokia.com>  Fri, 19 Aug 2011 16:02:02 +0300

system-ui (1.1.9-1) unstable; urgency=low

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 09 Aug 2011 13:02:25 +0300

system-ui (1.1.8-1) unstable; urgency=low

  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 20:54:18 +0300

system-ui (1.1.7-1) unstable; urgency=low

  * Fixes: NB#276034 - [TASK] Operator name should be replaced with "No coverage" when in limited service state and there is no network available

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 17:27:17 +0300

system-ui (1.1.6-1) unstable; urgency=low

  * Fixes: NB#249391 - [TASK] Notifier improvement

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 08 Aug 2011 14:49:50 +0300

system-ui (1.1.5-1) unstable; urgency=low

  * Fixes: NB#273060 - Connect charger to an already low battery sleeping device, show only charging notification when display turns on
  * Fixes: NB#262034 - Accessory connected sound played when disconnecting USB cable
  * Fixes: NB#275357 - [TASK] Low memory notification dialog

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Thu, 04 Aug 2011 17:16:33 +0300

system-ui (1.1.4-1) unstable; urgency=low
