@@ -1,6 +1,0 @@
-[Application Memory Low]
-type=cgroups
-control=/syspart/system/applications/cgroup.event_control
-limit=/syspart/system/applications/memory.limit_in_bytes
-used=85%
-sensor=/syspart/system/applications/memory.memsw.usage_in_bytes
