@@ -1,6 +1,7 @@
 system-ui (1.1.12~1) unstable; urgency=low
 
   * [UNRELEASED]
+  * Fixes: NB#278885 - Disable low memory notification for PR1.1 & later
 
  -- Pankaj Saharan <pankaj.saharan@nokia.com>  Tue, 23 Aug 2011 15:33:21 +0300
 
